# traceiq

./: .env.example  .gitignore  CLAUDE.md  PROGRESS.md  README.md  analyze_traces.py  generate_traces.py  main.py  pyproject.toml  start_phoenix.py
docs/superpowers/plans/: 2026-05-16-traceiq-phase2.md  2026-05-17-tier2-large-trace.md  2026-05-17-ui-redesign.md
docs/superpowers/specs/: 2026-05-16-traceiq-design.md  2026-05-17-ui-redesign-design.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: Chat.tsx  IssuePanel.tsx  Settings.tsx  TraceList.tsx
frontend/src/lib/: tokens.ts
src/traceiq/: cli.py  models.py
src/traceiq/adapters/: base.py  langsmith.py  phoenix.py
src/traceiq/analysis/: agent.py  community_card.py  engine.py  loop_dedup.py  prompts.py
src/traceiq/api/: app.py  pipeline.py  routes.py
src/traceiq/cache/: db.py
src/traceiq/graph/: anomaly.py  builder.py  classifier.py  community.py
tests/: conftest.py  test_adapter.py  test_agent_analyzer.py  test_anomaly.py  test_cache.py  test_classifier.py  test_community.py  test_community_card.py  test_engine.py  test_graph_builder.py  test_loop_dedup.py  test_models.py  test_routes.py  test_tier2_models.py
