[project]
name = "traceiq"
version = "0.1.0"
description = "Framework-agnostic AI-powered trace analyzer for LLM systems"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.55.0",
    "arize-phoenix>=15.10.0",
    "aiosqlite>=0.20.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "networkx>=3.3",
    "openinference-instrumentation>=0.1.51",
    "opentelemetry-exporter-otlp-proto-http>=1.41.1",
    "opentelemetry-sdk>=1.41.1",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
traceiq = "traceiq.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/traceiq"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
